--- a/TP2-OnlyDigits/app/src/main/res/values/strings.xml
+++ b/TP2-OnlyDigits/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">OnlyDigits</string>
+    <string name="app_name">CountDown</string>
     <string name="target_number">%d ± 0</string>
     <string name="new_palette">New</string>
     <string name="undo">Undo</string>
@@ -15,4 +15,7 @@
     <string name="mul">*</string>
     <string name="div">/</string>
     <string name="steps">STEPS</string>
+    <string name="win">You won 👌</string>
+    <string name="solution_text">Solution\n%s</string>
+    <string name="no_solution_text">There is no solution 😒</string>
 </resources>
